- cleaned up bestiary window layout
- performance optimization: sound events too far away to be heard are not loaded

*experimental features*
- built-in support added for capturing video of web client viewport


1.47

*world*
- renamed chef Patrick to Preston
- new achievements:
  - 30 Minutes or Less: Deliver 25 hot pizzas
- Balduin allows requesting different item for Ultimate Collector quest

*web client*
- fixed text extending past edge of notification bubbles
- added support for saving chat log to file
- larger buttons for touch-only devices
- travel log displays while waiting for response from server
- fixed infinite request loop when travel log items technically empty
- supports optional tab placement above panel contents
- travel log tabs match theme
- added basic lighting effects support
- added sound tab to settings dialog

*server fixes*
- fixed Seven Cherubs not showing up as completed
- fixed unable to start deathmatch after logout while in arena


1.46

*world*
- renamed items:
  - "courgette" to "zucchini"
  - "iron" to "iron bar"
  - "salad" to "lettuce"
- fixed many NPCs not responding to certain chat options
- normalized spelling of some words to American English in most NPC dialogues
  - "colour" -> "color"
  - "defence" -> "defense"
  - "favour" -> "favor"
  - "favourite" -> "favorite"
  - "fulfil" -> "fulfill"
  - "organise" -> "organize"
  - "recognise" -> "rocognize"
- Orchiwald will stop after entity collision instead of reversing path
- foghorn sounds plays when ferry arrives at mainland & island
- added commerce sound to more NPCs when exchanging money for items/services
- seeds can be used from inventory

*graphics*
- redrawn placeholder tiles in Oni Palace
- fixed some outfit errors
- disabled unfinished weapon-style attack sprites

*web client*
- improved movement handling with on-screen joystick & direction pad
- alternate "floating" menu style
- alternate "floating" chat panel style