@@ -1,6 +1,6 @@
 /* $Id$ */
 /***************************************************************************
- *                   (C) Copyright 2003-2010 - Stendhal                    *
+ *                   (C) Copyright 2003-2024 - Stendhal                    *
  ***************************************************************************
  ***************************************************************************
  *                                                                         *
@@ -14,8 +14,11 @@ package games.stendhal.server.entity.item.scroll;
 
 import java.util.Map;
 
+import games.stendhal.common.NotificationType;
 import games.stendhal.server.core.events.DelayedPlayerTextSender;
 import games.stendhal.server.entity.player.Player;
+import games.stendhal.server.maps.kikareukin.islands.Gatekeeper;
+import games.stendhal.server.maps.kikareukin.islands.Gatekeeper.RequestState;
 import games.stendhal.server.util.TimeUtil;
 
 /**
@@ -73,6 +76,18 @@ public class BalloonScroll extends TimedTeleportScroll {
 			}
 			return false;
 		}
+
+		final RequestState requestState = Gatekeeper.requestEntrance(player);
+		if (RequestState.DENIED.equals(requestState)) {
+			// balloon is used if player was punished
+			removeOne();
+			player.sendPrivateText(NotificationType.NEGATIVE, "Your balloon popped.");
+			return false;
+		} else if (RequestState.PUNISH_QUEUED.equals(requestState)) {
+			// player tried to use balloon again immediately after being denied
+			return false;
+		}
+
 		long lastuse = -1;
 		if (player.hasQuest("balloon")) {
 			lastuse = Long.parseLong(player.getQuest("balloon"));
